build_log_again.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_game
   +- compile exe nyon_game Debug native 9 errors
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Writer.zig:1792:5: error: invalid format string 's' for type 'comptime_int'
    @compileError("invalid format string '" ++ fmt ++ "' for type '" ++ @typeName(@TypeOf(value)) ++ "'");
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    printValue__anon_58344: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Writer.zig:1151:40
    print__anon_55309: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Writer.zig:703:25
    10 reference(s) hidden; use '-freference-trace=12' to see all references
src\application.zig:79:39: error: struct 'array_list.Aligned(u8,null)' has no member named 'init'
        var errors = std.ArrayList(u8).init(self.allocator);
                     ~~~~~~~~~~~~~~~~~^~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\array_list.zig:576:12: note: struct declared here
    return struct {
           ^~~~~~
src\engine.zig:421:51: error: root source file struct 'raylib_stub' has no member named 'drawRectangleRoundedLinesEx'
    pub const drawRectangleRoundedLinesEx = raylib.drawRectangleRoundedLinesEx;
                                            ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\engine.zig:455:33: error: root source file struct 'raylib_stub' has no member named 'drawPlane'
    pub const drawPlane = raylib.drawPlane;
                          ~~~~~~^~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\engine.zig:839:43: error: root source file struct 'raylib_stub' has no member named 'getScreenToWorldRay'
    pub const getScreenToWorldRay = raylib.getScreenToWorldRay;
                                    ~~~~~~^~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\engine.zig:963:36: error: root source file struct 'raylib_stub' has no member named 'getMouseDelta'
        pub const getDelta = raylib.getMouseDelta;
                             ~~~~~~^~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\game\sandbox.zig:178:32: error: error union is ignored
        self.rebuildSpatialGrid();
        ~~~~~~~~~~~~~~~~~~~~~~~^~
src\game\sandbox.zig:178:32: note: consider using 'try', 'catch', or 'if'
src\ui\sandbox_ui.zig:16:68: error: struct 'config.constants.Colors.TEXT_MUTED' has no member named 'r'
const COLOR_TEXT_GRAY = engine.Color{ .r = config.Colors.TEXT_MUTED.r, .g = config.Colors.TEXT_MUTED.g, .b = config.Colors.TEXT_MUTED.b, .a = config.Colors.TEXT_MUTED.a };
                                           ~~~~~~~~~~~~~~~~~~~~~~~~^~
src\config\constants.zig:122:28: note: struct declared here
    pub const TEXT_MUTED = struct { r: u8 = 200, g: u8 = 200, b: u8 = 200, a: u8 = 255 };
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\ui\shared_ui.zig:318:80: error: missing struct field: x
    const position = panels.detectDockPosition(mouse.x, mouse.y, target_rect, .{}) orelse return;
                                                                              ~^~
src\ui\shared_ui.zig:318:80: note: missing struct field: y
src\ui\panels.zig:109:8: note: struct declared here
    _: struct { x: f32, y: f32 },
       ^~~~~~~~~~~~~~~~~~~~~~~~~
error: 9 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 3 errors
src\editor\main_editor_tui.zig:108:22: error: member function expected 1 argument(s), found 0
    defer output_line.deinit();
          ~~~~~~~~~~~^~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\array_list.zig:624:13: note: function declared here
        pub fn deinit(self: *Self, gpa: Allocator) void {
        ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    handleInput__anon_55381: src\editor\main_editor_tui.zig:64:52
    handleInput: src\editor\main_editor.zig:340:48
    5 reference(s) hidden; use '-freference-trace=7' to see all references
src\physics\ecs_integration.zig:190:41: error: expected type 'physics.types.BodyHandle', found 'usize'
            if (self.body_to_entity.get(body_handle)) |entity| {
                                        ^~~~~~~~~~~
src\physics\types.zig:12:24: note: struct declared here
pub const BodyHandle = struct {
                       ^~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\hash_map.zig:367:37: note: parameter type declared here
        pub fn get(self: Self, key: K) ?V {
                                    ^
src\physics\rigidbody.zig:176:60: error: no field or member function named 'normalize' in 'physics.types.Quaternion'
        self.orientation = self.orientation.mul(delta_quat).normalize();
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
src\physics\types.zig:89:24: note: struct declared here
pub const Quaternion = struct {
                       ^~~~~~
error: 3 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 9 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 3 errors

error: the following build command failed with exit code 1:
.zig-cache\o\92f2af8c2753723feeadd90abb19e800\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x1f7d7bb5 -Z3e4d2fc3a89f4c25
